--- a/public/index.html
+++ b/public/index.html
@@ -4,32 +4,52 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Chat App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="icon" href="img/favicon.png">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <h1>Chat App</h1>
 
-    <div id="messages"></div>
+    <div class="chat">
+        <div class="chat__sidebar">
 
-    <form id="message-form">
-        <input name="message" placeholder="Message">
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send location</button>
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
+
+            <div class="compose">
+                <form id="message-form">
+                    <input name="message" placeholder="Message">
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>
+
+
+        </div>
+    </div>
+
 
     <script id="message-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - {{message}}</p>
+        <div class="message">
+            <p>
+                <span class="message__name">Some User Name</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p>{{message}}</p>
         </div>
     </script>
 
     <script id="location-message-template" type="text/html">
         <div>
-            <p>{{createdAt}} - <a href="{{url}}" target ="_blank">My current location</a></p>
+                <p>
+                        <span class="message__name">Some User Name</span>
+                        <span class="message__meta">{{createdAt}}</span>
+                </p>
+            <p><a href="{{url}}" target ="_blank">My current location</a></p>
         </div>
     </script>
 
